✨ feat(icefs client; icefs server;): 增加thrift通道，修改服务端以适配
增加thrift通道，预期会大幅提升性能，修改服务端代码以适配

--- a/src/lowlevel/client/CMakeLists.txt
+++ b/src/lowlevel/client/CMakeLists.txt
@@ -9,6 +9,8 @@ endif()
 set(3RD_PARTY_DIR ../../../3rdparty)
 set(YYJSON_DIR_NAME yyjson)
 set(ICEFS_RPC_DIR_NAME rpc)
+set(ICEFS_GRPC_DIR_NAME grpc)
+set(ICEFS_THRIFT_DIR_NAME thrift)
 set(ICEFS_UTILS_DIR_NAME utils)
 set(ICEFS_OPERS_DIR_NAME icefsoperators)
 
@@ -18,7 +20,8 @@ pkg_check_modules(LIBFUSE3 REQUIRED IMPORTED_TARGET fuse3)
 
 set(ICEFS_UTILS_DIR ${PROJECT_SOURCE_DIR}/${ICEFS_UTILS_DIR_NAME})
 set(ICEFS_OPERS_DIR ${PROJECT_SOURCE_DIR}/${ICEFS_OPERS_DIR_NAME})
-set(ICEFS_RPC_SUB_PRJ icefsClientRpc)
+set(ICEFS_GRPC_SUB_PRJ icefsClientGRpc)
+set(ICEFS_THRIFT_SUB_PRJ icefsClientThrift)
 
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
@@ -27,7 +30,8 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 add_subdirectory(${ICEFS_RPC_DIR_NAME})
 
 include_directories(${3RD_PARTY_DIR}/${YYJSON_DIR_NAME}/src
-    ${CMAKE_CURRENT_BINARY_DIR}/${ICEFS_RPC_DIR_NAME}
+    ${CMAKE_CURRENT_BINARY_DIR}/${ICEFS_RPC_DIR_NAME}/${ICEFS_GRPC_DIR_NAME}
+    ${CMAKE_CURRENT_BINARY_DIR}/${ICEFS_RPC_DIR_NAME}/${ICEFS_THRIFT_DIR_NAME}
     ${LIBFUSE3_INCLUDE_DIRS}
     include)
 
@@ -42,4 +46,5 @@ add_executable(${PROJECT_NAME} icefsClient.cpp
 
 target_link_libraries(${PROJECT_NAME}
     PkgConfig::LIBFUSE3
-    ${ICEFS_RPC_SUB_PRJ})
+    ${ICEFS_GRPC_SUB_PRJ}
+    ${ICEFS_THRIFT_SUB_PRJ})
