--- a/build
+++ b/build
@@ -17,7 +17,8 @@ mkdir -p $ICEFS_CLIENT_DIR
 mkdir -p $ICEFS_SERVER_DIR
 
 ICEFS_HOME=..
-PROTO_PATH=$ICEFS_HOME/protos/lowlevel
+LOW_LEVEL_PROTOS_PATH=$ICEFS_HOME/protos/lowlevel
+LOW_LEVEL_THRIFTS_PATH=$ICEFS_HOME/thrifts/lowlevel
 LOW_LEVEL_SRC_PATH=$ICEFS_HOME/src/lowlevel
 LOW_LEVEL_CLIENT_SRC_PATH=$LOW_LEVEL_SRC_PATH/client
 LOW_LEVEL_SERVER_SRC_PATH=$LOW_LEVEL_SRC_PATH/server
@@ -25,7 +26,7 @@ LOW_LEVEL_SERVER_SRC_PATH=$LOW_LEVEL_SRC_PATH/server
 echo "Now building client."
 cmake -DDEBUG=0 -DCMAKE_BUILD_TYPE=Release $LOW_LEVEL_CLIENT_SRC_PATH
 
-make -j 4
+make -j 6
 
 mv ./bin ./$ICEFS_CLIENT_DIR
 mv ./lib ./$ICEFS_CLIENT_DIR
@@ -33,7 +34,8 @@ cp $LOW_LEVEL_CLIENT_SRC_PATH/config.json ./$ICEFS_CLIENT_DIR/bin
 
 echo "Now building server."
 
-protoc -I $PROTO_PATH --go-grpc_out=$LOW_LEVEL_SERVER_SRC_PATH/icefsrpc --go_out=$LOW_LEVEL_SERVER_SRC_PATH/icefsrpc $PROTO_PATH/*.proto
+protoc -I $LOW_LEVEL_PROTOS_PATH --go-grpc_out=$LOW_LEVEL_SERVER_SRC_PATH/icefsgrpc --go_out=$LOW_LEVEL_SERVER_SRC_PATH/icefsgrpc $LOW_LEVEL_PROTOS_PATH/*.proto
+thrift -gen go:package=icefsthrift -out $LOW_LEVEL_SERVER_SRC_PATH/icefsthrift $LOW_LEVEL_THRIFTS_PATH/icefsServices.thrift
 
 cd $LOW_LEVEL_SERVER_SRC_PATH && go build -ldflags '-s -w' -o ../../../$ICEFS_BUILD_DIR/$ICEFS_SERVER_DIR/icefs-server
 
