🐞 fix(icefs server;): 锁问题修复
修复doIcefsRmDir中的锁问题

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@
 
 # Build dir
 
-src/lowlevel/client/build
-src/lowlevel/server/build
+src/lowlevel/client/build/
+src/lowlevel/server/build/
 icefs_build/
+3rdparty/
